# SWELancer-Benchmark

./: Dockerfile  Dockerfile-lock.json  Dockerfile_x86  Dockerfile_x86-lock.json  LICENSE.md  README.md  add_git_tag.py  calkit.yaml  dvc.yaml  morph_agent.py  navigator_solver.py  pyproject.toml  recon_bench.py  replay.py  requirements-lock.txt  requirements.txt  requirements_mitmproxy.txt  requirements_primary.txt  requirements_pytest.txt  run_swelancer.py  sample.env  setup_mitmproxy.yml  swelancer.py  swelancer_agent.py
.github/workflows/: ci.yml
alcatraz/clusters/: _vnc.py  swarm.py
alcatraz/compat/: api_proxy.py
alcatraz/examples/: random.py  swarm_edge_cases.py  swarm_gpu.py  swarm_no_internet.py  swarm_serialization.py
alcatraz/server/: infra.tf  server.py  state.py
alcatraz/utils/: cmds.py
eval/: run_swelancer.py  swelancer.py
issues/1/: issue_data.json
nanoeval/: evaluation_test.py  json_recorder.py  library_config.py  pyproject.toml  sync_to_contractors.sh
nanoeval/_evallib_vendor/: run_spec_base.py
nanoeval/examples/: _gpqa.py  gpqa_api.py
nanoeval/extras/: README.md
nanoeval/metrics/: agents.py
nanoeval/nanoeval/: _db.py  asyncio_utils.py  eval.py  evaluation.py  recorder_protocol.py  setup.py
nanoeval/nanoeval/examples/: gpqa_simple.py
nanoeval/nanoeval/metrics/: agents.py  standard.py
nanoeval/nanoeval/solvers/: mcq.py  mcq_api.py  mcq_test.py
nanoeval/nanoeval/solvers/computer_tasks/: code_execution_interface.py
nanoeval/nanoeval/x/kevinliu/: exit_stack_behavior.py
nanoeval/solvers/: agent_solver.py  short_answer.py
nanoeval/solvers/computer_tasks/: solver.py
nanoeval/tests/: dependencies_test.py
runtime_scripts/: run.sh  run_test.yml  run_user_tool.yml  setup_expensify.yml  setup_mitmproxy.yml
(+2189 files in other folders)
