[project]
name = 'swelancer'
version = "0.1.0"
dependencies = [
    "alcatraz",
    "nanoeval",
    "nanoeval-alcatraz",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.11"

[tool.setuptools]
packages = ["swelancer"]

[tool.uv.sources]
nanoeval = { path = "project/nanoeval" }
alcatraz = { path = "project/alcatraz" }
nanoeval-alcatraz = { path = "project/nanoeval_alcatraz" }
