[project]
name = "nanoeval"
version = "0.1.0"
dependencies = [
    "aiodebug",
    "aiomonitor",
    "jinja2",
    "matplotlib",
    "openai",
    "pandas",
    "blobfile",
    "boostedblob",
    "pyarrow",
    "pydantic>=2",
    "streamlit",
    "tqdm",
    "loky",
    "numpy",
    "pytest-asyncio",
    "dill",
    "typing-extensions",
    "pydantic-core",
    "psutil",
    "ipython",
    "structlog",
]

[tool.oaipkg]
monorepo-dependencies = [
    "chz",
]
compliance-policies = ["research-core-compliant"]
allow-private-imports-from = ["preparedness", "nanoeval_extra"]

[tool.buildkite]
name = "nanoeval"
pipeline = "buildkite/pipeline.yml"
owner = "@kevinliu"

[tool.setuptools.packages.find]
include = ["nanoeval*"]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true

# These two make life easier if you use a lot of untyped libraries:
warn_return_any = false
allow_untyped_calls = true

# Make mypy less nitpicky
warn_unused_ignores = false

# Do not use `ignore_missing_imports`, instead use:
disable_error_code = ["import-untyped"]

# If you don't want to force use of type annotations:
# allow_incomplete_defs = true
# allow_untyped_defs = true
# allow_any_generics = true
